--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,18 +33,6 @@ services:
       IS_PERSISTENT: TRUE
       ANONYMIZED_TELEMETRY: FALSE
 
-  # Redis Cache
-  redis:
-    image: redis:7-alpine
-    container_name: verixai-redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - verixai-network
-    command: redis-server --appendonly yes
-
   # # Ollama Service (for local LLM)
   # ollama:
   #   image: ollama/ollama:latest
@@ -76,7 +64,6 @@ services:
       DATABASE_URL: postgresql+asyncpg://verixai:verixai_password@postgres:5432/verixai_db
       CHROMA_HOST: chromadb
       CHROMA_PORT: 8000
-      REDIS_URL: redis://redis:6379
       # LLM Provider Configuration
       LLM_PROVIDER: ${LLM_PROVIDER:-ollama}
       EMBEDDING_PROVIDER: ${EMBEDDING_PROVIDER:-ollama}
@@ -108,22 +95,19 @@ services:
         condition: service_healthy
       chromadb:
         condition: service_started
-      redis:
-        condition: service_started
       # ollama:
       #   condition: service_started
     networks:
       - verixai-network
 
-  # Frontend React App
+  # Frontend React App with Vite
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-      target: development
     container_name: verixai-frontend
     environment:
-      REACT_APP_API_URL: http://localhost:8000
+      VITE_API_URL: http://localhost:8000
     volumes:
       - ./frontend:/app
       - /app/node_modules
@@ -134,23 +118,6 @@ services:
     networks:
       - verixai-network
 
-  # Nginx Reverse Proxy (Production)
-  nginx:
-    image: nginx:alpine
-    container_name: verixai-nginx
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./frontend/build:/usr/share/nginx/html:ro
-    ports:
-      - "80:80"
-      - "443:443"
-    depends_on:
-      - backend
-    networks:
-      - verixai-network
-    profiles:
-      - production
-
 networks:
   verixai-network:
     driver: bridge
@@ -158,5 +125,4 @@ networks:
 volumes:
   postgres_data:
   chroma_data:
-  redis_data:
   # ollama_data:
