--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,9 +25,18 @@ LLM_PROVIDER=ollama
 EMBEDDING_PROVIDER=ollama
 
 # Ollama Configuration (Default Provider)
-OLLAMA_BASE_URL=http://localhost:11434
-OLLAMA_CHAT_MODEL=llama3.2
+OLLAMA_BASE_URL=http://ollama:11434
+OLLAMA_CHAT_MODEL=llama3.2:1b
 OLLAMA_EMBEDDING_MODEL=nomic-embed-text
+
+# Asynchronous Processing Configuration
+ASYNC_PROCESSING_ENABLED=true
+MAX_PARALLEL_DOCUMENTS=5
+MAX_PARALLEL_CHUNKS=10
+
+# Multi-Agent System Configuration
+MULTI_AGENT_ENABLED=true
+MAX_AGENTS_PER_QUERY=6
 
 # OpenAI Configuration (Optional)
 OPENAI_API_KEY=your-openai-api-key-here
