--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -48,6 +48,11 @@ python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 bcrypt = "^4.1.0"
 
+# Queue and Background Tasks
+celery = {extras = ["redis"], version = "^5.3.0"}
+redis = "^5.0.0"
+flower = "^2.0.0"
+
 # Utilities
 python-dotenv = "^1.0.0"
 click = "^8.1.0"
