--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,9 +30,11 @@ langchain-anthropic = "^0.1.0"
 openai = "^1.11.0"
 chromadb = "^0.4.22"
 httpx = "^0.27.0"
+sentence-transformers = "^2.2.2"
+semantic-text-splitter = "^0.8.1"
 
-# Strands Agents SDK
-strands-agents = "^0.1.1"
+# Strands Agents SDK - Not currently used, commented out to reduce dependencies
+# strands-agents = "^0.1.1"
 
 # Database
 sqlalchemy = "^2.0.25"
