--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -59,6 +59,14 @@ click = "^8.1.0"
 rich = "^13.7.0"
 tenacity = "^8.2.0"
 
+# Data Analytics and Visualization
+pandas = "^2.1.0"
+numpy = "^1.24.0"
+matplotlib = "^3.7.0"
+seaborn = "^0.12.0"
+plotly = "^5.17.0"
+scikit-learn = "^1.3.0"
+
 [tool.poetry.group.dev.dependencies]
 # Testing
 pytest = "^7.4.0"
