--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -18,6 +20,7 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "web-vitals": "^2.1.4"
@@ -44,8 +47,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@types/plotly.js": "^2.12.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-plotly.js": "^2.6.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.8.0",
