--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -67,6 +67,15 @@ seaborn = "^0.12.0"
 plotly = "^5.17.0"
 scikit-learn = "^1.3.0"
 
+# Advanced Retrieval Dependencies
+rank-bm25 = "^0.2.2"
+transformers = "^4.36.0"
+sentence-transformers = "^2.3.0"
+nltk = "^3.8.1"
+scipy = "^1.11.0"
+torch = "^2.1.0"
+faiss-cpu = "^1.7.4"
+
 [tool.poetry.group.dev.dependencies]
 # Testing
 pytest = "^7.4.0"
